--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -24,7 +24,7 @@
           <div class="form_name-block">
             <label class="label-name" for="customerName">Enter your name <span class="asterisk">*</span></label>
             <div id="event-name-hint" class="hint-text">
-              The name you’ll use on this website
+              The name you'll use on this website
             </div>
             <input class="input-name" type="text" id="customerName" name="customerName" pattern="[A-Za-zÀ-ž\s'-]{2,30}"
               placeholder="Theodore" title="A valid name consists of 2-30 characters and only letters." minlength="2"
