Change aria-label text in footer

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -95,7 +95,7 @@
     <footer>
       &copy; Copyright - 2024. Created by
       <a href="https://github.com/nadika-zavodovska" target="_blank" class="copyright_link"
-        aria-label="Open github of author's of website">Nadika</a>
+        aria-label="Nadika's GitHub profile">Nadika</a>
       with love 🤍
     </footer>
   </div>
