Change aria-label text in footer

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -24,7 +24,7 @@
           <div class="form_name-block">
             <label class="label-name" for="customerName">Enter your name <span class="asterisk">*</span></label>
             <div id="event-name-hint" class="hint-text">
-              The name you’ll use on this website
+              The name you'll use on this website
             </div>
             <input class="input-name" type="text" id="customerName" name="customerName" pattern="[A-Za-zÀ-ž\s'-]{2,30}"
               placeholder="Theodore" title="A valid name consists of 2-30 characters and only letters." minlength="2"
@@ -43,9 +43,10 @@
         </fieldset>
 
         <fieldset class="form_color-fieldset">
-          <legend class="form_color-legend">What color of T-shirt would you like to order? <span class="asterisk">*</span>
+          <legend class="form_color-legend">What color of T-shirt would you like to order? <span
+              class="asterisk">*</span>
           </legend>
-        
+
           <div class="form_color-block">
             <div>
               <input type="radio" name="productColor" id="redColor" value="redColor" aria-describedby="required-field"
@@ -58,8 +59,8 @@
               <label class="label-blue" for="blueColor">Blue</label>
             </div>
             <div>
-              <input type="radio" name="productColor" id="greenColor" value="greenColor" aria-describedby="required-field"
-                required />
+              <input type="radio" name="productColor" id="greenColor" value="greenColor"
+                aria-describedby="required-field" required />
               <label class="label-green" for="greenColor">Green</label>
             </div>
           </div>
@@ -81,11 +82,11 @@
         </fieldset>
         <fieldset class="form_delivery-fieldset">
           <legend>When do you want the t-shirt to be delivered? <span class="asterisk">*</span></legend>
-        <div class="form_date-block">
-          <label for="deliveryDate" class="label-date">Delivery:</label>
-          <input class="input-date" type="date" id="deliveryDate" name="deliveryDate" min="2024-10-14" max="2024-11-14"
-            aria-describedby="required-field" required />
-        </div>
+          <div class="form_date-block">
+            <label for="deliveryDate" class="label-date">Delivery:</label>
+            <input class="input-date" type="date" id="deliveryDate" name="deliveryDate" min="2024-10-14"
+              max="2024-11-14" aria-describedby="required-field" required />
+          </div>
         </fieldset>
         <button class="reset" type="reset">Reset</button>
         <button class="submit" type="submit">Submit</button>
@@ -94,7 +95,7 @@
     <footer>
       &copy; Copyright - 2024. Created by
       <a href="https://github.com/nadika-zavodovska" target="_blank" class="copyright_link"
-        aria-label="Open github of author's of website">Nadika</a>
+        aria-label="Nadika's GitHub profile">Nadika</a>
       with love 🤍
     </footer>
   </div>
