--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -10,7 +10,7 @@
     <!-- Header section -->
     <header>
         <div class="hero-image">
-            <img src="../Git img/githubimg.jpg" alt="Hero Image"/>
+            <img src="Git img/githubimg.jpg" alt="Hero Image"/>
             <div class="hero-text">
                 <h1>Wire•Frame</h1>
                 <h2>Basics you need to know about Git</h2>
