--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,7 +13,7 @@
             <img src="Git img/githubimg.jpg" alt="Hero Image"/>
             <div class="hero-text">
                 <h1>Wire•Frame</h1>
-                <h2>Basics you need to know about Git</h2>
+                <h2>Learn About Git</h2>
             </div>
         </div>
     </header>
