--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -24,12 +24,15 @@
             <!-- Article 1: What is Git -->
             <article id="question1" class="main">
                 <h2>What is Git?</h2>
+                 <img src="Git img/git(1).jpg" alt="gitbotimg" width="300" height="300"/>
                 <p>Git is a distributed version control system. It empowers developers to track changes to their code, create branches for different features or bug fixes, and seamlessly merge changes. Let's explore its essential concepts and how it fits into your workflow.</p>
+                 <p><a href="https://docs.github.com/en/get-started/using-git/about-git">Learn more</a></p>
             </article>
 
             <!-- Article 2: Why developers need Git -->
             <article id="question2" class="second">
                 <h2>Why Git?</h2>
+                <img src="Git img/git2.jpg" alt="gitbranchimg" width="350" height="300"/>
                 <h3>Why do developers need Git?</h3>
                 <p>Version control, a fundamental practice in software development, offers numerous advantages that streamline the development process and elevate the quality of your projects. Git and GitHub are at the forefront of these advantages.</p>
                 <div class="container">
