--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -74,11 +74,11 @@
             </ul>
         </section>
     </main>
-    <script src="script.js"></script>
+    <div class="Footer">
     <!-- Footer section -->
     <footer class="footer">
         <p>Footer</p>
         <p>email: git@github.com</p>
-    </footer>
+    </footer></div/>
 </body>
 </html>
