Added t-shirt sizes

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -37,7 +37,21 @@
         <option value="Grey">Grey</option>
         </select>
     </div>
-    <button>Submit</button>
+
+    <!--Size selection-->
+      <div class="form-contents">
+        <label for="T-shirt size">Select your t-shirt size:</label>
+        <select id="T-shirt size" name="T-shirt size" required>
+        <option value="" disabled selected>Select your size</option>  
+        <option value="X-Small">X-Small (XS)</option>
+        <option value="Small">Small (S)</option>
+        <option value="Medium">Medium (M)</option>
+        <option value="Large">Large (L)</option>
+        <option value="X-Large">X-Large (XL)</option>
+        <option value="XX-Large">XX-Large (XXL)</option>
+        </select>
+      </div>
+   <button>Submit</button>
   
   </form>
 
