Added delivery date

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -51,6 +51,14 @@
         <option value="XX-Large">XX-Large (XXL)</option>
         </select>
       </div>
+
+<!-- Delivery Date -->
+<div class="form-contents">
+  <label for="delivery-date">Select your delivery date:</label>
+  <input type="date" id="delivery-date" name="delivery-date" min="2024-11-04" max="2024-11-25" required>
+</div>
+
+   <!--Submit button-->   
    <button>Submit</button>
   
   </form>
