commit form changes

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,7 +13,43 @@
     <h1>Product Pick</h1>
   </header>
   <main>
-  <form>
+  <form class="form">
+    <div>
+      <label for="name">Name:</label>
+      <input type="text" name="name" id="name" placeholder="John Gump" required>
+    </div>
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" name="email" id="email" required>
+    </div>
+    
+    <div>
+      <label for="colour">colour:</label>
+      <select name="colour" id="colour" required>
+        <option value="">Choose colour</option>
+        <option value="blue">Blue</option>
+        <option value="red">Red</option>
+        <option value="green">green</option>
+      </select>
+    </div>
+    <div>
+      <label for="size">Size:</label>
+      <select name="size" id="size" required> 
+        <option value="">Please select </option>
+        <option value="xs">XS</option>
+        <option value="s">S</option>
+        <option value="m">M</option>
+        <option value="l">L</option>
+        <option value="xl">XL</option>
+        <option value="xxl">XXL</option>
+      </select>
+    </div>
+    <div>
+      <label for="date">Date:</label>
+      <input type="date" name="date" id="date" required>
+    </div>
+    <button type="reset">Reset</button>
+    <button type="submit">Summit</button>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
   </form>
@@ -21,7 +57,7 @@
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Ruei Ruei</h2>
   </footer>
 </body>
 
