added an image and other  styles to the wireframe

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -15,21 +15,30 @@
 
 <main class="articles">
   <article>
-    <h2>What is Git?</h2>
-    <p>Git is a distributed version control system that helps developers manage and track changes to their code.</p>
-    <a href="https://www.geeksforgeeks.org/what-is-git-version-control/" target="_blank">Learn more</a>
+   <img src="img/whatGit.webp" alt="Git's description">
+   <div class="text-content">
+    <h3>What is Git?</h3>
+    <p>Git is a distributed version control system designed to help developers manage and track changes in their code over time.</p>
+    <a href="https://www.geeksforgeeks.org/what-is-git-version-control/" class="read-more-button">Learn more</a>
+   </div> 
   </article>
   
   <article>
-    <h2>Why Do Developers Need Git?</h2>
+    <img src="img/whyGit.jpeg" alt="Importance of git">
+  <div class="text-content">
+    <h3>Why Do Developers Need Git?</h3>
     <p>Git allows developers to collaborate, maintain versions, and backtrack changes efficiently.</p>
-    <a href="https://www.nobledesktop.com/learn/git/what-is-git" target = "-blank">Learn more</a>
+    <a href="https://www.nobledesktop.com/learn/git/what-is-git" class="read-more-button">Learn more</a>
+  </div>
   </article>
   
   <article>
-    <h2>What is a Branch in Git?</h2>
-    <p>A branch in Git allows you to work on different parts of a project without affecting the main codebase.</p>
-    <a href="https://gitdeveloperguide.solomonmarvel.com/working-with-git/what-is-git-branch" target = "_blank">Learn more</a>
+    <img src="img/gitBranch.jpeg" alt="git branch">
+  <div class="text-content">
+    <h3>What is a Branch in Git?</h3>
+    <p>A branch in Git is a separate line of development within a repository.</p>
+    <a href="https://gitdeveloperguide.solomonmarvel.com/working-with-git/what-is-git-branch" class="read-more-button">Learn more</a>
+  </div>
   </article>
 </main>
 
