--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -7,42 +7,45 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-     <header>
-      <h1>Guide to git</h1>
+    <div class="header">
+      <h1>Guide to Git</h1>
       <p>The free open source distributed version control system primarily used by developers to manage their source code. See how it works.</p>
-     </header>
-     <main>
-      <section>
-
-        <article>
+  </div>
+  
+  <div class="main-content">
+      <div class="banner">
           <h2>What is Git?</h2>
-          <p>Git, open-source distributed version control system (DVCS) created by Linux developer Linus Torvalds in 2005.
-          <br>As of 2024 Git is the most widely used version control system and is used by both individuals and companies<br> including Microsoft, Netflix, and Google.</br></br></p>
-          <a href="https://www.britannica.com/technology/Git">Read more</a>
-          </article>
-
-          <article>
-            <h2>Why do developers need Git?</h2>
-             <ul>
-              <li>Tracking Changes: Git allows you to track every change made to your codebase</li>
-              <li>Collaboration: Git enables multiple developers to work on the same project simultaneously</li>
-              <li>Open Source and Collaboration: Git is widely used in open-source projects, making it the standard for collaborative development</li>
-              <li>Rollback and Recovery: If you introduce a bug or make a mistake, Git lets you easily revert to previous working versions of your code, ensuring you can recover from errors quickly.</li>
-             </ul>
-             <a href="https://www.atlassian.com/git/tutorials/why-git#:~:text=Git%20is%20all%20about%20efficiency,safe%20environment%20to%20work%20in.">Read more</a>
-          </article>
-
-          <article>
-            <h3>What is a branch in Git?</h3> 
-            <p>In Git, a branch is essentially a pointer to a specific commit in your project's history. 
-              <br>Think of it like a bookmark that lets you jump back to a particular point in time where your code was in a specific state.</br></p>
-            <a href="https://www.atlassian.com/git/tutorials/using-branches/git-checkout">Read more</a>
-          </article>
-          
-      </section>
-      </main>
+          <p>Git, an open-source distributed version control system (DVCS) created by Linux developer Linus Torvalds in 2005. As of 2024, Git is the most widely used version control system and is used by both individuals and companies, including Microsoft, Netflix, and Google.</p>
+          <a href="https://rogerdudler.github.io/git-guide/" class="button">Read More</a>
+      </div>
+  
+      <div class="info-section">
+          <div class="info-card">
+              <img src="https://images.unsplash.com/photo-1707061229170-fc232a07a55f?q=80&w=1481&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Developers need Git">
+              <h2>Why do developers need Git?</h2>
+              <ul>
+                  <li>Tracking Changes: Git allows you to track every change made to your codebase.</li>
+                  <li>Collaboration: Git enables multiple developers to work on the same project simultaneously.</li>
+                  <li>Open Source: Git is widely used in open-source projects, making it the standard for collaborative development.</li>
+                  <li>Rollback and Recovery: Easily revert to previous working versions of your code.</li>
+              </ul>
+              <a href="https://www.nobledesktop.com/learn/git/what-is-git" class="button">Read More</a>
+          </div>
+          <div class="info-card">
+              <img src="https://media.istockphoto.com/id/897695334/vector/code-fork-flat-icons-with-outlines.jpg?s=1024x1024&w=is&k=20&c=c9zwHexRZf9rmLWKIe4N-3x_VS5yrn3QYKa7xkRLVxk=" alt="Branching in Git">
+              <h3>What is a branch in Git?</h3>
+              <p>A branch in Git is a separate line of development that allows you to work on features or fixes independently from the main project. It lets you experiment, make changes, and merge them back without affecting the main codebase.</p>
+              <a href="https://www.atlassian.com/git/tutorials/using-branches#:~:text=In%20Git%2C%20branches%20are%20a,branch%20to%20encapsulate%20your%20changes." class="button">Read More</a>
+          </div>
+      </div>
+  </div>
+  
+  <div class="footer">
       <footer>
-        <p>&copy; 2024 Guide to Git</p>
+          <p>&copy; 2024 Guide to Git</p>
       </footer>
-</html>
-
+  </div>
+  
+  </body>
+  </html>
+    
