--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -6,7 +6,10 @@
     <title>My form exercise</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/Form-Controls/styles.css" />
+    <link
+      rel="stylesheet"
+      href="/Wireframe/Module-User-Focused-Data/Form-Controls/styles.css"
+    />
   </head>
   <body>
     <header>
@@ -18,51 +21,67 @@
           <fieldset>
             <legend>Product Pick Form</legend>
             <div class="name">
-            <label for="name">Name: </label>
-            <input name="name" type="text" id="name" placeholder="Your name" required pattern=".{2,}"/>
-          </div>
-          <br />
-          <div class="email">
-            <label for="email">Email: </label>
-            <input name="email" id="email" type="email" placeholder="Your email" required >
-          </div>
-          <div class="color">
-            <fieldset>
-            <legend>Please select your favorite color:</legend>
-            <input type="radio" id="red" name="color" value="red" />
-            <label for="red">Red</label><br />
-            <input type="radio" id="green" name="color" value="green" />
-            <label for="green">Green</label><br />
-            <input type="radio" id="blue" name="color" value="blue" />
-            <label for="blue">Blue</label><br />
+              <label for="name">Name: </label>
+              <input
+                name="name"
+                type="text"
+                id="name"
+                placeholder="Your name"
+                required
+                pattern=".{2,}"
+              />
+            </div>
+            <br />
+            <div class="email">
+              <label for="email">Email: </label>
+              <input
+                name="email"
+                id="email"
+                type="email"
+                placeholder="Your email"
+                required
+              />
+            </div>
+            <div class="color">
+              <fieldset>
+                <legend>Please select your favorite color:</legend>
+                <input type="radio" id="red" name="color" value="red" />
+                <label for="red">Red</label><br />
+                <input type="radio" id="green" name="color" value="green" />
+                <label for="green">Green</label><br />
+                <input type="radio" id="blue" name="color" value="blue" />
+                <label for="blue">Blue</label><br />
+              </fieldset>
+            </div>
+            <br />
+            <div class="size">
+              <label for="size">Choose a size:</label>
+              <select name="size" id="size" required>
+                <option value="select">Select a size</option>
+                <option value="extra_small">XS</option>
+                <option value="small">S</option>
+                <option value="medium">M</option>
+                <option value="large">L</option>
+                <option value="extra_large">XL</option>
+                <option value="extra_extra_large">XXL</option>
+              </select>
+            </div>
+            <br />
+            <div class="date">
+              <label for="date">Choose a deliver date:</label>
+              <input type="date" id="date" name="delivery_date" />
+            </div>
           </fieldset>
-          </div>
-          <br />
-          <div class="size">
-            <label for="size">Choose a size:</label>
-            <select name="size" id="size" required>
-              <option value="select">Select a size</option>
-              <option value="extra_small">XS</option>
-              <option value="small">S</option>
-              <option value="medium">M</option>
-              <option value="large">L</option>
-              <option value="extra_large">XL</option>
-              <option value="extra_extra_large">XXL</option>
-            </select>
-          </div><br>
-          <div class="date">
-            <label for="date">Choose a deliver date:</label>
-            <input type="date" id="date" name="delivery_date" />
-          </div>
-        </fieldset>
-        </form><br><br><br>
+        </form>
+        <br /><br /><br />
         <button class="button" type="submit" value="submit">Submit</button>
-      </div><br><br><br><br>
+      </div>
+      <br /><br /><br /><br />
       <div class="footer">
-      <footer>
-           <h2>By Luke Manyamazi</h2>
-      </footer>
-    </div>
-    </main>    
+        <footer>
+          <h2>By Luke Manyamazi</h2>
+        </footer>
+      </div>
+    </main>
   </body>
 </html>
