--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -6,10 +6,7 @@
     <title>My form exercise</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="/Wireframe/Module-User-Focused-Data/Form-Controls/styles.css"
-    />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
