--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -32,7 +32,7 @@
               <input type="radio" id="yellow" name="color"/>
               <label for="yellow">Yellow</label>
               
-              <input type="radio" id="Blue" name="color"/>
+              <input type="radio" id="blue" name="color"/>
               <label for="Blue">Blue</label>
             </div>
         </fieldset>
