added min and max on the date

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -6,7 +6,10 @@
     <title>My form exercise</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="/Wireframe/Module-User-Focused-Data/Form-Controls/styles.css"
+    />
   </head>
   <body>
     <header>
@@ -66,7 +69,13 @@
             <br />
             <div class="date">
               <label for="date">Choose a deliver date:</label>
-              <input type="date" id="date" name="delivery_date" />
+              <input
+                type="date"
+                id="date"
+                name="delivery_date"
+                min="2024-11-06"
+                max="2024-12-06"
+              />
             </div>
           </fieldset>
         </form>
