Added all 3 images with proper alignment

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -27,14 +27,14 @@
           
           <article>
             <h4>Why do developers need Git?</h4>
-            <p>Developers use Git to collaborate effectively on projects, manage code changes, and keep track of contributions. Git ensures that changes can be merged without conflict and helps in maintaining a backup of the entire project’s history.
-              
-            </p>
+            <img src="./images/img1.png" alt="GitImg">
+            <p>Developers use Git to collaborate effectively on projects, manage code changes, and keep track of contributions. Git ensures that changes can be merged without conflict and helps in maintaining a backup of the entire project’s history. </p>
             <a href="#">Read more</a>       
           </article>
   
           <article>
             <h4>What is a branch in Git?</h4>
+            <img src="./images/img2.png" alt="GitImg">
             <p>A branch is a sequence of commits in a project. That allows developers to work on new features or fixes without affecting the main project. It enables teams to experiment.</p>
             <a href="#">Read more</a>       
           </article>
