--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -45,7 +45,7 @@
           <footer >
             <div class="foot">
             <p>seerat fatima</p>
-            <p><a href="https://github.com/">GitHub</a></p>
+            <a href="https://github.com/">GitHub></a>
           </div>
           </footer>
                       
