--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -32,8 +32,11 @@
               type="text"
               name="name"
               id="name"
+              minlength="3"
+              maxlength="30" 
               placeholder="Username"
               required
+              
             />
           </div>
           <div>
@@ -78,6 +81,7 @@
               max="2024-11-16"
               name="date"
               id="date"
+              required
             />
           </div>
         </div>
