--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,14 +14,11 @@
   </header>
   <main>
   <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
   </form>
 
   </main>
   <footer>
-    <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Dlila </h2>
   </footer>
 </body>
 
