--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -43,7 +43,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2024 by Rahwa Zeslus. All Rights Reserved..</p>
+  <p>&copy; 2024 by Rahwa Zeslus Haile. All Rights Reserved..</p>
 </footer>
 
 </body>
