I added header to page index.html with h1 and p

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -9,5 +9,9 @@
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <header id="git-header">
+      <h1>GitHub</h1>
+      <p>Git is Version Control Software</p>
+    </header>
 </body>
 </html
